# mcp-mem0

./: .env  .env.example  QDRANT_SETUP.md  README.md  pyproject.toml
scripts/: kill_server.sh  mem0_memory_manager.py  qdrant_manager.py
src/: main.py  utils.py
tests/: README.md  test_basic.py  test_mcp_server.py
